--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ignite-ui/react": "^2.2.4",
     "@next/font": "13.1.6",
     "@prisma/client": "^4.10.1",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
@@ -20,6 +21,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "next-auth": "^4.21.1",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
